--- a/index.ipynb
+++ b/index.ipynb
@@ -581,7 +581,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "len(unique_count)\n",
     "num_of_repeats = None\n",
     "num_of_repeats # 3"
    ]
