--- a/index.ipynb
+++ b/index.ipynb
@@ -593,6 +593,7 @@
     }
    ],
    "source": [
+    "countries = ['Croatia','Argentina','Canada','Mexico','Italy','South Korea','USA','Morocco','Malta','Finland']\n",
     "len(unique_countries)\n",
     "num_of_repeats = None\n",
     "num_of_repeats # 3"
