Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -595,6 +595,16 @@
    "source": [
     "countries = ['Croatia','Argentina','Canada','Mexico','Italy','South Korea','USA','Morocco','Malta','Finland']\n",
     "len(countries)\n",
+    "unique_countries = 'Argentina',\n",
+    " 'Canada',\n",
+    " 'Croatia',\n",
+    " 'Finland',\n",
+    " 'Italy',\n",
+    " 'Malta',\n",
+    " 'Mexico',\n",
+    " 'Morocco',\n",
+    " 'South Korea',\n",
+    " 'USA'}\n",
     "\n",
     "len(unique_countries)\n",
     "num_of_repeats = None\n",
