Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -595,16 +595,7 @@
    "source": [
     "countries = ['Croatia','Argentina','Canada','Mexico','Italy','South Korea','USA','Morocco','Malta','Finland']\n",
     "len(countries)\n",
-    "unique_countries = ['Argentina',\n",
-    " 'Canada',\n",
-    " 'Croatia',\n",
-    " 'Finland',\n",
-    " 'Italy',\n",
-    " 'Malta',\n",
-    " 'Mexico',\n",
-    " 'Morocco',\n",
-    " 'South Korea',\n",
-    " 'USA']'Argentina',\n",
+    "unique_countries = 'Argentina',\n",
     " 'Canada',\n",
     " 'Croatia',\n",
     " 'Finland',\n",
