--- a/index.ipynb
+++ b/index.ipynb
@@ -577,21 +577,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'unique_countries' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-5de5101ca6d5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0munique_countries\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mnum_of_repeats\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mnum_of_repeats\u001b[0m \u001b[0;31m# 3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'unique_countries' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "countries = ['Croatia','Argentina','Canada','Mexico','Italy','South Korea','USA','Morocco','Malta','Finland']\n",
     "len(countries)\n",
@@ -604,17 +592,7 @@
     " 'Mexico',\n",
     " 'Morocco',\n",
     " 'South Korea',\n",
-    " 'USA']'Argentina',\n",
-    " 'Canada',\n",
-    " 'Croatia',\n",
-    " 'Finland',\n",
-    " 'Italy',\n",
-    " 'Malta',\n",
-    " 'Mexico',\n",
-    " 'Morocco',\n",
-    " 'South Korea',\n",
-    " 'USA'}\n",
-    "\n",
+    " 'USA']\n",
     "len(unique_countries)\n",
     "num_of_repeats = None\n",
     "num_of_repeats # 3"
