--- a/index.ipynb
+++ b/index.ipynb
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
        "10"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +604,9 @@
     " 'Morocco',\n",
     " 'South Korea',\n",
     " 'USA']\n",
-    "len(unique_countries)\n"
+    "len(unique_countries)\n",
+    "num_of_repeats = 10\n",
+    "num_of_repeats # 3"
    ]
   },
   {
